--- a/Release_Binary/README
+++ b/Release_Binary/README
@@ -2,12 +2,14 @@
 | BWAPI 4.0.1 Beta |
 --------------------
 
-The BWAPI web site    http://code.google.com/p/bwapi/
-Documentation         http://code.google.com/p/bwapi/wiki/BWAPIManual
+The BWAPI web site    https://github.com/bwapi/bwapi
+                  
+Documentation         https://bwapi.github.io/
+Documentation (old)   http://code.google.com/p/bwapi/wiki/BWAPIManual
 Blog                  http://bwapi.blogspot.com/
 Google Group          http://groups.google.com/group/bwapi
 Forums                http://www.broodwarai.com/forums/
-Bug Reports           http://code.google.com/p/bwapi/issues/list
+Bug Reports           https://github.com/bwapi/bwapi/issues
 IRC Channel           Freenode #BWAPI
 
 1. Introduction to BWAPI
@@ -50,7 +52,7 @@ IRC Channel           Freenode #BWAPI
   Build Instructions:
     1. Run the installer and go to the installation directory.
 
-    2. Open ExampleProjects.sln in Visual C++ 2010 Express and build the solution.
+    2. Open ExampleProjects.sln in Visual C++ 2013 (Express or Professional) and build the solution.
 
   All projects should now be built and can be found in the solution directory's Release or
   Debug subdirectories. Make sure to run the corresponding version of BWAPI and set the
