Updated documentation for several files.
Made a large amount of documentation compatible with intellisense.
Fixed the "fork me" banner so that a scroll bar isn't added.
Added all relevant classes to Modules.
Split some class members into groups, such as the Unit Commands in
UnitInterface.
Converted some old WeaponType documentation to new style.
Documented some undocumented WeaponType members.

--- a/Documentation/dox/groups.dox
+++ b/Documentation/dox/groups.dox
@@ -4,10 +4,7 @@ List of type classes.
 
 @defgroup Types Types
 List of type constants.
-@{
-  @defgroup UpgradeTypes UpgradeTypes
-  List of all upgrades.
-@}
+@see BWAPI::Type
 
 @defgroup Interface Interface Classes
 List of interface classes.
