--- a/Documentation/dox/playertypes.dox
+++ b/Documentation/dox/playertypes.dox
@@ -1,13 +1,11 @@
 /*!
-@var BWAPI::PlayerTypes::Enum::None
-Value of 0  [0x0]. See BWAPI::PlayerTypes::None.
+@var BWAPI::PlayerTypes::Enum::Closed
+Value of 8  [0x8]. See BWAPI::PlayerTypes::Closed.
 */
 /*!
-@var BWAPI::PlayerTypes::None
-None. Corresponds with PlayerTypes::Enum::None.
+@var BWAPI::PlayerTypes::Closed
+Closed. Corresponds with PlayerTypes::Enum::Closed.
 
-<table border='0'><tr><td><strong>Game Locations</strong></td><td></td></tr>
-</table>
 
 */
 /*!
@@ -30,8 +28,6 @@ Value of 10  [0xa]. See BWAPI::PlayerTypes::PlayerLeft.
 @var BWAPI::PlayerTypes::PlayerLeft
 PlayerLeft. Corresponds with PlayerTypes::Enum::PlayerLeft.
 
-<table border='0'><tr><td><strong>Game Locations</strong></td><td></td></tr>
-</table>
 
 */
 /*!
@@ -83,6 +79,18 @@ EitherPreferHuman. Corresponds with PlayerTypes::Enum::EitherPreferHuman.
 
 */
 /*!
+@var BWAPI::PlayerTypes::Enum::Neutral
+Value of 7  [0x7]. See BWAPI::PlayerTypes::Neutral.
+*/
+/*!
+@var BWAPI::PlayerTypes::Neutral
+Neutral. Corresponds with PlayerTypes::Enum::Neutral.
+
+<table border='0'><tr><td><strong>Game Locations</strong></td><td>Game, Lobby</td></tr>
+</table>
+
+*/
+/*!
 @var BWAPI::PlayerTypes::Enum::ComputerLeft
 Value of 11  [0xb]. See BWAPI::PlayerTypes::ComputerLeft.
 */
@@ -90,19 +98,5 @@ Value of 11  [0xb]. See BWAPI::PlayerTypes::ComputerLeft.
 @var BWAPI::PlayerTypes::ComputerLeft
 ComputerLeft. Corresponds with PlayerTypes::Enum::ComputerLeft.
 
-<table border='0'><tr><td><strong>Game Locations</strong></td><td></td></tr>
-</table>
-
-*/
-/*!
-@var BWAPI::PlayerTypes::Enum::Unknown
-Value of 12  [0xc]. See BWAPI::PlayerTypes::Unknown.
-*/
-/*!
-@var BWAPI::PlayerTypes::Unknown
-Unknown. Corresponds with PlayerTypes::Enum::Unknown.
-
-<table border='0'><tr><td><strong>Game Locations</strong></td><td></td></tr>
-</table>
 
 */
